# TK4_compare_mets_with_templates

./: .gitignore  TK4_compare_mets_with_templates_2_0_0.py  config.example.toml  pyproject.toml  readme.md  requirements.txt
src/compare_mets/: __init__.py  __main__.py  cli.py  compare.py  config.py  findings.py  parser.py  tree_compare.py  writer.py
src/tk4_compare/: cli.py  compare.py  writer.py
tests/: test_compare.py  test_writer.py
