[project]
name = "compare_mets"
dynamic = ["version"]
description = "Tool to compare METS XML files with KB METS templates"
readme = "README.md"
authors = [
  { name = "Thomas Haighton", email = "thomas.haighton@kb.nl" }
]
dependencies = [
  "lxml>=4.9.0",
  "tqdm>=4.60.0"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]

[project.scripts]
tk4-compare = "compare_mets.cli:main"
compare-mets = "compare_mets.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "compare_mets.__version__"}
